Remove ancient dependencies